syntax = "proto3";

package tasks;

service TaskManager {
    rpc CreateTask (CreateTaskRequest) returns (Task) {}
    rpc GetTask (GetTaskRequest) returns (Task) {}
    rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {}
    rpc UpdateTask (UpdateTaskRequest) returns (Task) {}
    rpc DeleteTask (DeleteTaskRequest) returns (Task) {}
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
}

message GetTaskRequest {
    int32 id = 1;
}

message ListTasksRequest {
    int32 page = 1;
    int32 pageSize = 2;
}

message ListTasksResponse {
    repeated Task tasks = 1;
}

message UpdateTaskRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message DeleteTaskRequest {
    int32 id = 1;
}

message Task {
    int32 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
    int64 created = 5;
    optional int64 updated = 6;
}
